--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,16 @@
     android:background="#654ea3"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".MainActivity">
-
+    tools:context="com.example.varshith.qr_generator.com.varshith.varshith.qr_generator.MainActivity">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center">
     <TextView
+        android:layout_marginLeft="100dp"
         android:id="@+id/top_tv"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="QR Scanner"
         android:textSize="25sp"
@@ -19,25 +24,30 @@
         android:fontFamily="@font/dancing_script"
         android:textStyle="bold"
         android:textAlignment="center"/>
-
-    <LinearLayout
+    <ImageView
+        android:id="@+id/info"
+        android:paddingLeft="80dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@drawable/ic_baseline_info_24" />
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerInParent="true"
         android:layout_below="@id/top_tv"
-        android:layout_marginVertical="12dp">
-
+        android:layout_marginVertical="13dp"
+        tools:ignore="NotSibling">
         <LinearLayout
             android:id="@+id/generate_qr"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="300dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:background="@drawable/bg"
-            android:layout_marginBottom="8dp"
-            android:padding="12dp"
-            android:gravity="center">
-
+            android:gravity="center"
+            android:padding="12dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -47,17 +57,15 @@
                 android:textSize="19sp"/>
 
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/scan_qr"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="300dp"
             android:layout_weight="1"
             android:background="@drawable/bg"
             android:padding="12dp"
             android:layout_marginTop="8dp"
             android:gravity="center">
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -65,9 +73,6 @@
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="19sp"/>
-
         </LinearLayout>
-
     </LinearLayout>
-
 </RelativeLayout>
