--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#483D8B"
     android:padding="20dp"
-    tools:context=".ScanActivity">
+    tools:context="com.example.varshith.qr_generator.com.varshith.varshith.qr_generator.ScanActivity">
 
     <TextView
         android:id="@+id/top_tv"
